--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "description": "",
     "license": "ISC",
     "author": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "npx tsx watch ./src/server.ts"
+        "dev": "npx tsx watch ./src/server.ts",
+        "build": "tsc"
     },
     "dependencies": {
         "bcryptjs": "^3.0.3",
